--- a/lari1.html
+++ b/lari1.html
@@ -10,6 +10,7 @@
     <h1>
         L'ART DU CODE
     </h1>
-    
+    <p>L'art du code est un site qui aide les codeurs débutants
+        <br> à se familiariser avec les outils de codage.</p>
 </body>
 </html>
