--- a/lari1.html
+++ b/lari1.html
@@ -11,6 +11,13 @@
         L'ART DU CODE
     </h1>
     <p>L'art du code est un site qui aide les codeurs débutants
-        <br> à se familiariser avec les outils de codage.</p>
+        <br> à se familiariser avec les outils de codage. <br>
+    pour atteindre cet objectif nous examinerons les trois points qui suivent <br>
+<ol>
+    <li>visual studio code</li>
+    <li>git bash</li>
+    <li>git hube</li>
+</ol>
+</p>
 </body>
 </html>
