tester une branch

--- a/lari1.html
+++ b/lari1.html
@@ -15,7 +15,7 @@
     pour atteindre cet objectif nous examinerons les trois points qui suivent <br>
 <ol>
     <li>visual studio code</li>
-    <li>git bash</li>
+    <li><a href="https://www.youtube.com/watch?v=eXF0epLeCgo"></a> git bash</li>
     <li>git hube</li>
 </ol>
 </p>
